# canny-edge-image-processor

./: .gitignore  LICENSE  Makefile  package-lock.json  package.json
.github/: codeowners  pull-request-template.md
.github/workflows/: CD.yml  CI.yml
app/client/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/client/public/: manifest.json
app/client/src/: styles.scss
app/client/src/components/ImageProcessScreen/: index.ts
app/client/src/components/NavBar/: NavBar.tsx
app/client/src/components/ParticleEffectBackground/: ParticleEffectBackground.tsx
app/client/src/connections/: manager.ts
app/client/src/constants/: particles-options.ts
app/client/src/pages/Dashboard/: Dashboard.tsx  _styles.scss
app/client/src/types/: event.ts  notification.ts
app/server/: pyproject.toml
app/server/src/: config.py  main.py
app/server/src/routers/: images.py
app/server/src/services/: image_process_scheduler.py  socket.py
services/client/: package-lock.json  package.json
services/client/src/: App.tsx  index.tsx
services/client/src/components/ImageProcessScreen/: ImageProcessingWindow.tsx
services/client/src/components/SelectImageButton/: SelectImageButton.tsx  index.ts
services/client/src/components/WelcomeScreen/: WelcomeScreen.tsx
services/client/src/types/: image.ts
services/server/: pyproject.toml
services/server/app/: main.py
services/server/app/routers/: images.py
services/server/app/services/: decorator.py  image_process_scheduler.py  image_processor.py  socket.py
(+1 files in other folders)
